fix scrollbar uglyness in chrome/safari... IE may need a better color. Firefox is screwed.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@22334 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_library.scss
+++ b/src/main/resources/scss/_library.scss
@@ -1,5 +1,6 @@
 
 #library {
+	@include scrollbar($track:transparent,$nib:rgba(0,0,0,0.3));
 	overflow: {
 		x: hidden;
 		y: auto;
